Add complete documentation and attack demonstration results
Documentation added:
- docs/ARCHITECTURE.md - Complete system architecture overview
- docs/API.md - Full API reference for all 3 MCP servers
- docs/DEMO_SCRIPT.md - Step-by-step live presentation guide
- docs/SECURITY_ANALYSIS.md - Comprehensive security vulnerability analysis

Attack demonstration results:
- results/attack-demo-output.txt - Live execution output
- results/attack-report.json - Structured JSON report with CVSS scores
- results/README.md - Results summary and interpretation

Key additions:
✅ Complete API documentation with examples
✅ Architecture diagrams and data flow
✅ CVE-style vulnerability descriptions
✅ CVSS 8.1 scoring (High severity)
✅ Live attack execution results
✅ Proof of successful exploitation (pwned.txt created)
✅ Mitigation recommendations

Attack verification:
- Malicious HTML fetched ✓
- Commands extracted from HTML comments ✓
- Commands executed in sandbox ✓
- File created: pwned.txt (38 bytes) ✓

All documentation complete for educational security demonstration.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ npm-debug.log*
 results/*.json
 results/*.html
 !results/.gitkeep
+!results/attack-report.json
 
 # Sandbox (keep structure, ignore content)
 /tmp/mcp-demo-sandbox/*
